# 42Porto-lvl_3_philosophers

./: .gitignore  README.md
philo/: CMakeLists.txt  Makefile  log.txt  philo
philo/inc/: philo.h
philo/src/: init.c  mini_ft.c  philosophers.c  test_utils.c  utils.c
philo_bonus/: CMakeLists.txt  Makefile  philo_bonus
philo_bonus/inc/: philo_b.h
philo_bonus/null/: main.c
philo_bonus/src/: cul_str.c  gastr_act.c  init_b.c  mini_ft.c  minilib.c  philo_b.c  philosophers_b.c  tbl_crew.c  tbl_gov.c  tbl_serv.c  utils_b.c
